apps/mafl/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mafl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mafl
  template:
    metadata:
      labels:
        app: mafl
    spec:
      containers:
        - name: mafl
          image: ghcr.io/hywax/mafl
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/data/config.yml
              subPath: config.yml
      volumes:
        - name: config
          configMap:
            name: mafl-config
