apps/mafl/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mafl
spec:
  selector:
    app: mafl
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
